--- a/ProjetoCursoFeriasSMN/Views/Produto/CadastraProduto.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Produto/CadastraProduto.cshtml
@@ -2,24 +2,30 @@
 
 <div id="modalCadastroProduto" class="modal">
     <div class="modal-content">
-        <h4 class="bold">Cadastro de produto</h4>
+        <h4 class="bold" style="margin-left: -13px">Cadastro de produto</h4>
         <div class="row">
-           @Ajax.BeginForm("Salvar","Produto",new AjaxOptions
+           @using(Ajax.BeginForm("Salvar","Produto",new AjaxOptions
            {
                HttpMethod = "POST",
                OnSuccess = "RecarregaGrid(data)",
                OnFailure = "Error(xhr)"
-           }){ 
+           })){ 
                 <div class="row">
-                    <div class="input-field col s6">
+                    <div class="input-field col s12">
                         <label for="txtNomeProduto">Nome</label>
                         <input id="txtNomeProduto" name="Nome" type="text">
                     </div>
-                    <div class="input-field col s6">
-                        <label for="txtEstoque">Cpf</label>
-                        <input id="txtEstoque" name="Estoque" type="number">
-                    </div>
                 </div>
+               <div class="row">
+                   <div class="input-field col s6">
+                       <label for="txtEstoque">Estoque</label>
+                       <input id="txtEstoque" name="Estoque" type="number">
+                   </div>
+                   <div class="input-field col s6">
+                       <label for="txtValorProduto">Valor R$</label>
+                       <input id="txtValorProduto" name="Preco" type="text">
+                   </div>
+               </div>
             }
         </div>
     </div>
@@ -31,6 +37,8 @@
 </div>
 
 <script>
+    
+    $('#txtValorProduto').mask("#.##0,00", { reverse: true });
 
     function RecarregaGrid(data) {
         //Exibindo um feedback de sucesso
