--- a/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
+++ b/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     <!--Javascript do materialize-->
     <script src="~/Lib/Javascript/materialize.min.js"></script>
     <script src="~/Lib/Javascript/Inicializacoes.js"></script>
+    <!--plugin para mascarar campos-->
+    <script src="~/Lib/Javascript/jquery.mask.js"></script>
 </head>
 <body>
     <!--Helper que renderiza o conteudo das views no corpo da página-->
