--- a/Source/ProjetoCursoFeriasSMN/Views/Cliente/TableClientes.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Cliente/TableClientes.cshtml
@@ -6,7 +6,7 @@
 <div id="modalDetalharCliente"></div>
 @Html.Partial("../Cliente/CadastraCliente")
 
-<table class="striped" id="gridClientes">
+<table id="gridClientes">
     <thead>
         <tr>
             <th>Nome</th>
