--- a/Source/ProjetoCursoFeriasSMN/Views/Cliente/DeletaCliente.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Cliente/DeletaCliente.cshtml
@@ -1,86 +1,99 @@
 ﻿@{ Layout = null;}
 @model ProjetoCursoFeriasSMN.Web.Application.Model.Cliente
 
-<div id="modalDeletarCliente" class="modal">
+<div id="modalDeletaCliente" class="modal">
     <div class="modal-content">
         <h4 class="bold">Deseja mesmo deletar este cliente?</h4>
         <div class="row">
-            @Ajax.BeginForm("DeletarConfirma", "Cliente", new AjaxOptions
-        {
-            HttpMethod = "Get",
-            OnSuccess = "RecarregaGrid(data)",
-            OnFailure = "Error(xhr)"
-        }){
-            <input type="hidden" name="codigoCliente" id="codigoCliente" value="@Model.CodigoCliente"/>
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="txtNome">Nome</label>
-                    <input id="txtNome" name="Nome" type="text" value="@Model.Nome" disabled>
+            @using (Ajax.BeginForm("DeletarConfirma", "Cliente", new AjaxOptions
+            {
+                HttpMethod = "Get",
+                OnSuccess = "RecarregaGrid(data)",
+                OnFailure = "Error(xhr)"
+            }))
+            {
+                <input type="hidden" name="codigoCliente" value="@Model.CodigoCliente" />
+                <input type="hidden" name="codigoEndereco" value="@Model.CodigoEndereco" />
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtNomeDeleta">Nome</label>
+                        <input id="txtNomeDeleta" name="Nome" type="text" value="@Model.Nome" readonly>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtCpfDeleta">Cpf</label>
+                        <input id="txtCpfDeleta" type="text" value="@Model.Cpf" readonly>
+                    </div>
                 </div>
-                <div class="input-field col s6">
-                    <label for="txtCpf">Cpf</label>
-                    <input id="txtCpf" type="text" value="@Model.Cpf" disabled>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtFoneDeleta">Telefone</label>
+                        <input id="txtFoneDeleta" type="text" value="@Model.Telefone" readonly>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtEmailDeleta">Email</label>
+                        <input id="txtEmailDeleta" type="email" value="@Model.Email" readonly>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="txtFone">Telefone</label>
-                    <input id="txtFone" type="text" value="@Model.Telefone" disabled>
+                <h5>Endereço</h5>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtCepDeleta">Cep</label>
+                        <input id="txtCepDeleta" type="text" value="@Model.Endereco.Cep" readonly>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtLogradouroDeleta">Logradouro:</label>
+                        <input id="txtLogradouroDeleta" type="text" value="@Model.Endereco.Logradouro" readonly>
+                    </div>
                 </div>
-                <div class="input-field col s6">
-                    <label for="txtEmail">Email</label>
-                    <input id="txtEmail" type="email" class="validate" data-error="e-mail incorreto" data-success="correto" value="@Model.Email"
-                           disabled>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <select id="txtEstadoDeleta" disabled>
+                            <option value="@Model.Endereco.Estado" selected>@Model.Endereco.Estado</option>
+                        </select>
+                        <label>Estado</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtCidadeDeleta">Cidade</label>
+                        <input id="txtCidadeDeleta" type="text" value="@Model.Endereco.Cidade" readonly>
+                    </div>
                 </div>
-            </div>
-            <h5>Endereço</h5>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="txtCep">Cep</label>
-                    <input id="txtCep" type="text" value="@Model.Endereco.Cep" disabled>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtBairroDeleta">Bairro</label>
+                        <input id="txtBairroDeleta" type="text" value="@Model.Endereco.Bairro" readonly>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtNumeroDeleta">Número</label>
+                        <input id="txtNumeroDeleta" type="text" value="@Model.Numero" readonly>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="txtLogradouro">Logradouro</label>
-                    <input id="txtLogradouro" type="text" value="@Model.Endereco.Logradouro" disabled>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="txtComplementoDeleta">Complemento</label>
+                        <textarea id="txtComplementoDeleta" class="materialize-textarea" readonly>@Model.Complemento</textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="txtBairro">Bairro</label>
-                    <input id="txtBairro" type="text" value="@Model.Endereco.Bairro" disabled>
+                <div class="modal-footer">
+                    <button type="submit" class="modal-action modal-close waves-effect waves-light btn">
+                        <i class="material-icons left">delete_forever</i>Confirma
+                    </button>
                 </div>
-                <div class="input-field col s6">
-                    <label for="txtCidade">Cidade</label>
-                    <input id="txtCidade" type="text" value="@Model.Endereco.Cidade" disabled>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <select id="txtEstado" disabled>
-                        <option value="@Model.Endereco.Estado" selected>@Model.Endereco.Estado</option>
-                    </select>
-                </div>
-            </div>
             }
         </div>
-    </div>
-    <div class="modal-footer">
-        <a class="modal-action modal-close waves-effect waves-light btn" href="#!" type="submit">
-            <i class="material-icons left">delete_forever</i>Confirma
-        </a>
     </div>
 </div>
 
 <script>
+
+    $(".modal").modal();
+    $("select").material_select();
 
     function RecarregaGrid(data) {
         //Exibindo um feedback de sucesso
         Materialize.Toast(data, 1000);
 
         //Fazendo a requisição no método que lista os produtos
-        $.get('@Url.Action("Listar")').success(function (data) {
+        $.get('@Url.Action("Listar","Cliente")').success(function (data) {
             $("#gridClientes tbody").html(data).slideDown("fast");
         }).error(function (xhr) {
             Materialize.toast(xhr.responseText, 4000);
