--- a/Source/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Cliente/EditaCliente.cshtml
@@ -5,126 +5,173 @@
     <div class="modal-content">
         <h4 class="bold">Editar dados do cliente</h4>
         <div class="row">
-            @Ajax.BeginForm("Salvar", "Cliente", new AjaxOptions
-       {
-           HttpMethod = "POST",
-           OnSuccess = "RecarregaGrid(data)",
-           OnFailure = "Error(xhr)"
-       }){
-            <input type="hidden" name="codigoCliente" id="codigoCliente" value="@Model.CodigoCliente" />
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="txtNome">Nome</label>
-                    <input id="txtNome" name="Nome" type="text" value="@Model.Nome">
+            @using (Ajax.BeginForm("Salvar", "Cliente", new AjaxOptions
+            {
+                HttpMethod = "PUT",
+                OnSuccess = "RecarregaGrid(data)",
+                OnFailure = "Error(xhr)"
+            }))
+            {
+                <input type="hidden" name="CodigoCliente" id="codigoCliente" value="@Model.CodigoCliente" />
+                <input type="hidden" name="CodigoEndereco" id="codigoEndereco" value="@Model.CodigoEndereco" />
+                <input type="hidden" name="Endereco.Estado" id="txtEstadoEdicaoHidden" value="@Model.Endereco.Estado" />
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtNomeEdicao">Nome</label>
+                        <input id="txtNomeEdicao" name="Nome" type="text" value="@Model.Nome">
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtCpfEdicao">Cpf</label>
+                        <input id="txtCpfEdicao" name="Cpf" type="text" value="@Model.Cpf">
+                    </div>
                 </div>
-                <div class="input-field col s6">
-                    <label for="txtCpf">Cpf</label>
-                    <input id="txtCpf" type="text" value="@Model.Cpf">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtFoneEdicao">Telefone</label>
+                        <input id="txtFoneEdicao" name="Telefone" type="text" value="@Model.Telefone">
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtEmailEdicao">Email</label>
+                        <input id="txtEmailEdicao" name="Email" type="email" value="@Model.Email">
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="txtFone">Telefone</label>
-                    <input id="txtFone" type="text" value="@Model.Telefone">
+                <h5>Endereço</h5>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtCepEdicao">Cep</label>
+                        <input id="txtCepEdicao" name="Endereco.Cep" type="text" value="@Model.Endereco.Cep">
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtLogradouroEdicao">Logradouro</label>
+                        <input id="txtLogradouroEdicao" name="Endereco.Logradouro" type="text" value="@Model.Endereco.Logradouro">
+                    </div>
                 </div>
-                <div class="input-field col s6">
-                    <label for="txtEmail">Email</label>
-                    <input id="txtEmail" type="email" class="validate" data-error="e-mail incorreto" data-success="correto" value="@Model.Email">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <select id="txtEstadoEdicao" disabled>
+                            <option value="AC">Acre</option>
+                            <option value="AL">Alagoas</option>
+                            <option value="AP">Amapá</option>
+                            <option value="AM">Amazonas</option>
+                            <option value="BA">Bahia</option>
+                            <option value="CE">Ceará</option>
+                            <option value="DF">Distrito Federal</option>
+                            <option value="ES">Espírito Santo</option>
+                            <option value="GO">Goiás</option>
+                            <option value="MA">Maranhão</option>
+                            <option value="MT">Mato Grosso</option>
+                            <option value="MS">Mato Grosso do Sul</option>
+                            <option value="MG">Minas Gerais</option>
+                            <option value="PA">Pará</option>
+                            <option value="PB">Paraíba</option>
+                            <option value="PR">Paraná</option>
+                            <option value="PE">Pernambuco</option>
+                            <option value="PI">Piauí</option>
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="RN">Rio Grande do Norte</option>
+                            <option value="RS">Rio Grande do Sul</option>
+                            <option value="RO">Rondônia</option>
+                            <option value="RR">Roraima</option>
+                            <option value="SC">Santa Catarina</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="SE">Sergipe</option>
+                            <option value="TO">Tocantins</option>
+                        </select>
+                        <label>Estado</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtCidadeEdicao">Cidade</label>
+                        <input id="txtCidadeEdicao" name="Endereco.Cidade" type="text" value="@Model.Endereco.Cidade">
+                    </div>
                 </div>
-            </div>
-            <h5>Endereço</h5>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="txtCep">Cep</label>
-                    <input id="txtCep" type="text" value="@Model.Endereco.Cep">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <label for="txtBairroEdicao">Bairro</label>
+                        <input id="txtBairroEdicao" name="Endereco.Bairro" type="text" value="@Model.Endereco.Bairro">
+                    </div>
+                    <div class="input-field col s6">
+                        <label for="txtNumeroEdicao">Numero</label>
+                        <input id="txtNumeroEdicao" name="Numero" type="number" value="@Model.Numero">
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <label for="txtLogradouro">Logradouro</label>
-                    <input id="txtLogradouro" type="text" value="@Model.Endereco.Logradouro">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label for="txtComplementoEdicao">Complemento</label>
+                        <textarea id="txtComplementoEdicao" name="Endereco.Complemento" class="materialize-textarea"></textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <label for="txtBairro">Bairro</label>
-                    <input id="txtBairro" type="text" value="@Model.Endereco.Bairro">
+                <div class="modal-footer">
+                    <button type="submit" class="modal-action modal-close waves-effect waves-light btn">
+                        <i class="material-icons left">create</i>Editar
+                    </button>
                 </div>
-                <div class="input-field col s6">
-                    <label for="txtCidade">Cidade</label>
-                    <input id="txtCidade" type="text" value="@Model.Endereco.Cidade">
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <select id="txtEstado">
-                        <option value="AC">Acre</option>
-                        <option value="AL">Alagoas</option>
-                        <option value="AP">Amapá</option>
-                        <option value="AM">Amazonas</option>
-                        <option value="BA">Bahia</option>
-                        <option value="CE">Ceará</option>
-                        <option value="DF">Distrito Federal</option>
-                        <option value="ES">Espírito Santo</option>
-                        <option value="GO">Goiás</option>
-                        <option value="MA">Maranhão</option>
-                        <option value="MT">Mato Grosso</option>
-                        <option value="MS">Mato Grosso do Sul</option>
-                        <option value="MG">Minas Gerais</option>
-                        <option value="PA">Pará</option>
-                        <option value="PB">Paraíba</option>
-                        <option value="PR">Paraná</option>
-                        <option value="PE">Pernambuco</option>
-                        <option value="PI">Piauí</option>
-                        <option value="RJ">Rio de Janeiro</option>
-                        <option value="RN">Rio Grande do Norte</option>
-                        <option value="RS">Rio Grande do Sul</option>
-                        <option value="RO">Rondônia</option>
-                        <option value="RR">Roraima</option>
-                        <option value="SC">Santa Catarina</option>
-                        <option value="SP">São Paulo</option>
-                        <option value="SE">Sergipe</option>
-                        <option value="TO">Tocantins</option>
-                    </select>
-                </div>
-            </div>
             }
         </div>
-    </div>
-    <div class="modal-footer">
-        <a class="modal-action modal-close waves-effect waves-light btn" href="#!" type="submit">
-            <i class="material-icons left">create</i>Editar
-        </a>
     </div>
 </div>
 
 <script>
 
+    $("select").material_select();
+    $(".modal").modal();
+
+    $("#txtEstadoEdicao").change(function () {
+        $("#txtEstadoEdicaoHidden").val($(this).val());
+    });
+
+    $("#txtCepEdicao").blur(function () {
+        if ($(this).val().length > 0) {
+            $.get("https://viacep.com.br/ws/" + $(this).val().replace("-", "") + "/json/")
+                .done(function (data) {
+                    //Preenchendo os inputs com os dados
+                    $("#txtBairroEdicao").val(data.bairro);
+                    $("#txtLogradouroEdicao").val(data.logradouro);
+                    $("#txtCidadeEdicao").val(data.localidade);
+                    $("#txtEstadoEdicao").val(data.uf);
+                    $("select").material_select();
+
+                    $("#txtBairroEdicao, #txtLogradouroEdicao, #txtCidadeEdicao").attr("readonly", "readonly").focus();
+                    $("#txtEstadoEdicao").attr("disabled", "disabled");
+                })
+                .fail(function () {
+                    Materialize.toast("Cep não encontrado", 5000);
+                    HabilitaCampos();
+                });
+        } else
+            HabilitaCampos();
+    });
+
+    function HabilitaCampos() {
+        $("#txtBairroEdicao, #txtLogradouroEdicao, #txtCidadeEdicao, #txtEstadoEdicao").trigger("focus").removeAttr("readonly");
+        $("#txtEstadoEdicao").removeAttr("disabled");
+        $("select").material_select();
+    }
+
     function RecarregaGrid(data) {
         //Exibindo um feedback de sucesso
-        Materialize.Toast(data, 1000);
-
+        Materialize.toast(data, 1000);
         //Fazendo a requisição no método que lista os produtos
-        $.get('@Url.Action("Listar")').success(function (data) {
-            $("#gridClientes tbody").html(data).slideDown("fast");
-        }).error(function (xhr) {
-            Materialize.toast(xhr.responseText, 4000);
-        });
+        $.get('@Url.Action("Listar","Cliente")')
+            .done(function (dataClient) {
+                $("#gridClientes tbody").html(dataClient).slideDown("fast");
+            })
+            .fail(function (xhr) {
+                Materialize.toast(xhr.responseText, 4000);
+            });
     }
 
     function Error(xhr) {
         Materialize.toast(xhr.responseText, 5000);
     }
 
-
     var SelecionaEstado = (function () {
         var opcao = "@Model.Endereco.Estado";
 
         //Deixando a opção certa selecionada
-        $("#txtEstado option").each(function (option) {
+        $("#txtEstadoEdicao option").each(function (option) {
             if ($(option).text() == opcao)
                 $(this).attr("selected", "selected");
         });
-    });
+    })();
 
 </script>
