--- a/Source/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Cliente/GridClientes.cshtml
@@ -10,20 +10,20 @@
             <td>@cliente.Cpf</td>
             <td>@cliente.Telefone</td>
             <td>@cliente.Email</td>
-            <td style="display: flex">
-                <a class="btn-floating waves-effect waves-light red" onclick="DetalhesCliente(this)" data-position="bottom"
+            <td style="float:right">
+                <a class="btn-floating waves-effect waves-light red tooltipped" onclick="DetalhesCliente(this)" data-position="bottom"
                    data-delay="50" data-tooltip="Detalhes">
                     <i class="material-icons">info</i>
                 </a>
-                <a class="btn-floating waves-effect waves-light red" onclick="EditaCliente(this)" data-position="bottom"
+                <a class="btn-floating waves-effect waves-light red tooltipped" onclick="EditaCliente(this)" data-position="bottom"
                    data-delay="50" data-tooltip="Editar">
                     <i class="material-icons">mode_edit</i>
                 </a>
-                <a class="btn-floating waves-effect waves-light red" onclick="ListaVendas(this)" data-position="bottom"
+                <a class="btn-floating waves-effect waves-light red tooltipped" onclick="ListaVendas(this)" data-position="bottom"
                    data-delay="50" data-tooltip="Vendas deste cliente">
                     <i class="material-icons">shopping_cart</i>
                 </a>
-                <a class="btn-floating waves-effect waves-light red" onclick="DeletaCliente(this)" data-position="bottom"
+                <a class="btn-floating waves-effect waves-light red tooltipped" onclick="DeletaCliente(this)" data-position="bottom"
                    data-delay="50" data-tooltip="Deletar">
                     <i class="material-icons">delete</i>
                 </a>
@@ -39,6 +39,8 @@ else
 }
 
 <script>
+    
+    $(".tooltipped").tooltip({delay: 50});
 
     function DetalhesCliente(element) {
         var codigoCliente = $(element).closest("tr").attr("data-codigoCliente");
@@ -52,6 +54,7 @@ else
                 $("#modalDetalharCliente").html(data);
                 //Abrindo a modal
                 $('#modalDetalhesCliente').modal("open");
+                FocaInputs("#txtNomeDetalha, #txtCpfDetalha, #txtFoneDetalha, #txtEmailDetalha, #txtCepDetalha, #txtLogradouroDetalha, #txtBairroDetalha, #txtCidadeDetalha, #txtNumeroDetalha, #txtComplementoDetalha");
             }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
@@ -66,7 +69,8 @@ else
                 })
             .done(function (data) {
                 $("#modalEditarCliente").html(data);
-                $('#modalEdicaoCliente').modal("open");
+                $("#modalEdicaoCliente").modal("open");
+                FocaInputs("#txtNomeEdicao, #txtCpfEdicao, #txtFoneEdicao, #txtCepEdicao ,#txtEmailEdicao, #txtLogradouroEdicao, #txtBairroEdicao, #txtCidadeEdicao, #txtNumeroEdicao, #txtComplementoEdicao");
             }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
@@ -81,7 +85,8 @@ else
                 })
             .done(function (data) {
                 $("#modalDeletarCliente").html(data);
-                $('#modalDeletarCliente').modal("open");
+                $('#modalDeletaCliente').modal("open");
+                FocaInputs("#txtNomeDeleta, #txtCpfDeleta, #txtFoneDeleta, #txtEmailDeleta, #txtCepDeleta, #txtLogradouroDeleta, #txtBairroDeleta, #txtCidadeDeleta, #txtNumeroDeleta, #txtComplementoDeleta");
             }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
@@ -99,6 +104,10 @@ else
             }).fail(function (xhr) {
                 Materialize.toast(xhr.responseText, 5000);
             });
+    }
+
+    function FocaInputs(inputs) {
+        $(inputs).focus();
     }
 
 </script>
