--- a/Source/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!--Javascript do materialize-->
     <script src="~/Lib/Javascript/materialize.min.js"></script>
-    <script src="~/Lib/Javascript/Inicializacoes.js"></script>
     <!--plugin para mascarar campos-->
     <script src="~/Lib/Javascript/jquery.mask.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 </head>
 <body>
     <!--Helper que renderiza o conteudo das views no corpo da página-->
