--- a/Source/ProjetoCursoFeriasSMN/Views/Produto/TableProdutos.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Produto/TableProdutos.cshtml
@@ -12,6 +12,7 @@
         <tr>
             <th>Código</th>
             <th>Nome</th>
+            <th>Valor R$</th>
             <th>Estoque</th>
             <th>
                 <a class="btn-floating waves-effect waves-light red tooltipped modal-trigger" style="float: right" data-position="left"
