--- a/Source/ProjetoCursoFeriasSMN/Views/Home/Index.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Home/Index.cshtml
@@ -41,12 +41,12 @@
         });
 
     //Trazendo a lista de produtos
-    @*$.get('@Url.Action("Listar", "Produto")')
+    $.get('@Url.Action("Listar", "Produto")')
         .done(function (data) {
             $("#gridProdutos tbody").html(data).slideDown("fast");
         }).
         fail(function (xhr) {
             Materialize.toast(xhr.responseText, 5000);
-        });*@
+        });
 
 </script>
