master - Adicionando editar do produto

--- a/Source/ProjetoCursoFeriasSMN/Views/Home/Index.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Home/Index.cshtml
@@ -49,4 +49,11 @@
             Materialize.toast(xhr.responseText, 5000);
         });
 
+    function FocaInputs(inputs) {
+        $(inputs).focus();
+    }
+
+    function Error(xhr) {
+        Materialize.toast(xhr.responseText, 5000);
+    }
 </script>
