master - Corrigindo mensagens de validação ao cadastrar a venda na classe de repositório e corrigindo comentário da procedure

--- a/Source/ProjetoCursoFeriasSMN/Views/Venda/CadastraEndereco.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Venda/CadastraEndereco.cshtml
@@ -66,7 +66,7 @@
 
 <script>
     
-    $("#txtCep").blur(function () {
+    $("#txtCepCadastro").blur(function () {
         if ($(this).val().length > 0) {
             $.get("https://viacep.com.br/ws/" + $(this).val().replace("-", "") + "/json/")
                 .done(function(data) {
@@ -90,7 +90,7 @@
     });
 
     function HabilitaCampos() {
-        $("#txtBairroCadastro, #txtLogradouroCadastro, #txtCidadeCadastro, #txtEstadoCadastro").trigger("focus").attr("readonly", "readonly");
+        $("#txtBairroCadastro, #txtLogradouroCadastro, #txtCidadeCadastro, #txtEstadoCadastro").trigger("focus").removeAttr("readonly");
         $("#txtEstadoCadastro").removeAttr("disabled");
     }
 
